--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,67 +1,77 @@
-version: '3.8'
+version: "3.8"
 
 services:
+  db:
+    image: postgres:13
+    platform: linux/arm64/v8
+    container_name: odoo-db
+    environment:
+      POSTGRES_DB: odoo
+      POSTGRES_USER: odoo
+      POSTGRES_PASSWORD: odoo
+    volumes:
+      - ./odoo/db-data:/var/lib/postgresql/data
+    networks:
+      - woodoo-net
+
   odoo:
-    build: ./odoo
+    image: odoo:14
+    platform: linux/amd64  # Odoo image NEM natív ARM64, így emuláció kell
+    container_name: odoo
     depends_on:
       - db
     ports:
       - "8069:8069"
-    volumes:
-      - ./odoo/addons:/mnt/extra-addons
-      - ./odoo/config:/etc/odoo
     environment:
       - HOST=db
       - USER=odoo
       - PASSWORD=odoo
-    networks:
-      - woodoo-net
-
-  db:
-    image: postgres:13
-    environment:
-      - POSTGRES_DB=postgres
-      - POSTGRES_USER=odoo
-      - POSTGRES_PASSWORD=odoo
     volumes:
-      - odoo-db-data:/var/lib/postgresql/data
-    networks:
-      - woodoo-net
-
-  wordpress:
-    build: ./wordpress
-    depends_on:
-      - wp-db
-    environment:
-      - WORDPRESS_DB_HOST=wp-db
-      - WORDPRESS_DB_NAME=wordpress
-      - WORDPRESS_DB_USER=wordpress
-      - WORDPRESS_DB_PASSWORD=wordpress
-    volumes:
-      - ./wordpress/wp-content:/var/www/html/wp-content
+      - ./odoo/extra-addons:/mnt/extra-addons
     networks:
       - woodoo-net
 
   wp-db:
     image: mariadb:10.5
     platform: linux/arm64/v8
+    container_name: wp-db
     environment:
-      - MYSQL_DATABASE=wordpress
-      - MYSQL_USER=wordpress
-      - MYSQL_PASSWORD=wordpress
-      - MYSQL_ROOT_PASSWORD=root
+      MYSQL_DATABASE: wordpress
+      MYSQL_USER: wordpress
+      MYSQL_PASSWORD: wordpress
+      MYSQL_ROOT_PASSWORD: root
     volumes:
-      - wp-db-data:/var/lib/mysql
+      - ./wordpress/db-data:/var/lib/mysql
+    networks:
+      - woodoo-net
+
+  wordpress:
+    image: wordpress:latest
+    platform: linux/arm64/v8
+    container_name: wordpress
+    depends_on:
+      - wp-db
+    ports:
+      - "8080:80"
+    environment:
+      WORDPRESS_DB_HOST: wp-db
+      WORDPRESS_DB_NAME: wordpress
+      WORDPRESS_DB_USER: wordpress
+      WORDPRESS_DB_PASSWORD: wordpress
+    volumes:
+      - ./wordpress/html:/var/www/html
     networks:
       - woodoo-net
 
   nginx:
     image: nginx:latest
+    platform: linux/arm64/v8
+    container_name: nginx
     ports:
-      - "443:443"
       - "80:80"
+      - "443:443"
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx:/etc/nginx/conf.d
       - ./certs:/etc/nginx/certs
     depends_on:
       - odoo
@@ -70,6 +80,8 @@ services:
       - woodoo-net
 
 volumes:
+  # Ezek a volume-ok fizikailag a projekten belül lesznek
+  # de ha külön docker volume-ot akarsz, csak írd át őket sima nevekre
   odoo-db-data:
   wp-db-data:
 
