--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,7 @@
 server {
     listen 80;
     server_name localhost;
+
     return 301 https://$host$request_uri;
 }
 
@@ -8,18 +9,16 @@ server {
     listen 443 ssl;
     server_name localhost;
 
-    ssl_certificate /etc/nginx/certs/localhost+2.pem;
-    ssl_certificate_key /etc/nginx/certs/localhost+2-key.pem;
+    ssl_certificate /etc/nginx/certs/localhost.pem;
+    ssl_certificate_key /etc/nginx/certs/localhost.key;
 
-    location /odoo {
-        proxy_pass http://odoo:8069;
+    location /odoo/ {
+        proxy_pass http://odoo:8069/;
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
     }
 
     location / {
-        proxy_pass http://wordpress:80;
+        proxy_pass http://wordpress:80/;
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
     }
 }
