--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,23 +2,15 @@ server {
     listen 80;
     server_name localhost;
 
-    return 301 https://$host$request_uri;
-}
-
-server {
-    listen 443 ssl;
-    server_name localhost;
-
-    ssl_certificate /etc/nginx/certs/localhost.pem;
-    ssl_certificate_key /etc/nginx/certs/localhost.key;
-
-    location /odoo/ {
-        proxy_pass http://odoo:8069/;
+    location /odoo {
+        proxy_pass http://odoo:8069;
         proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
     }
 
     location / {
-        proxy_pass http://wordpress:80/;
+        proxy_pass http://wordpress:80;
         proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
     }
 }
