--- a/odoo/Dockerfile
+++ b/odoo/Dockerfile
@@ -1,7 +1,5 @@
 FROM odoo:14
 
 USER root
-RUN pip3 install --upgrade pip && \
-    pip3 install wheel
-
+RUN apt-get update && apt-get install -y nano
 USER odoo
