--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   odoo-db:
     image: postgres:13
@@ -16,7 +18,7 @@ services:
     build:
       context: ./odoo
       dockerfile: Dockerfile
-      platform: linux/arm64
+    platform: linux/arm64
     depends_on:
       - odoo-db
     environment:
@@ -48,7 +50,7 @@ services:
     build:
       context: ./wordpress
       dockerfile: Dockerfile
-      platform: linux/arm64
+    platform: linux/arm64
     depends_on:
       - wp-db
     ports:
