--- a/.env
+++ b/.env
@@ -1,18 +1,11 @@
-ODOO_VERSION=14.0
-POSTGRES_DB=postgres
-POSTGRES_USER=odoo
-POSTGRES_PASSWORD=odoo
-PGDATA=/var/lib/postgresql/data/pgdata
-
-WORDPRESS_DB_NAME=wordpress
-WORDPRESS_DB_USER=wpuser
-WORDPRESS_DB_PASSWORD=wppass
-WORDPRESS_TABLE_PREFIX=wp_
-WORDPRESS_DB_HOST=wp-db
-
-MYSQL_ROOT_PASSWORD=wppass
-
+# Odoo
 ODOO_DB_HOST=odoo-db
-ODOO_DB_PORT=5432
+ODOO_DB_NAME=odoo
 ODOO_DB_USER=odoo
 ODOO_DB_PASSWORD=odoo
+
+# WordPress
+WP_DB_NAME=wordpress
+WP_DB_USER=wpuser
+WP_DB_PASSWORD=wppass
+WP_DB_ROOT_PASSWORD=rootpass
