--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,12 @@
-networks:
-  erp_network:
-    driver: bridge
+version: '3.8'
+
+services:
+  nginx:
+    image: nginx:latest
+    container_name: woodoo-nginx
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./certs:/etc/nginx/certs:ro
