--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,61 @@ version: '3.8'
 
 services:
   nginx:
-    image: nginx:latest
-    container_name: woodoo-nginx
+    image: nginx:stable
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./certs:/etc/nginx/certs:ro
+    depends_on:
+      - odoo
+      - wordpress
+
+  odoo:
+    image: odoo:14
+    environment:
+      - HOST=localhost
+    ports:
+      - "8069:8069"
+    volumes:
+      - odoo-data:/var/lib/odoo
+    depends_on:
+      - db
+
+  db:
+    image: postgres:13
+    environment:
+      POSTGRES_DB: odoo
+      POSTGRES_USER: odoo
+      POSTGRES_PASSWORD: odoo
+    volumes:
+      - db-data:/var/lib/postgresql/data
+
+  wordpress:
+    image: wordpress:latest
+    environment:
+      WORDPRESS_DB_HOST: wp_db:3306
+      WORDPRESS_DB_NAME: wordpress
+      WORDPRESS_DB_USER: wordpress
+      WORDPRESS_DB_PASSWORD: wordpress
+    volumes:
+      - wordpress-data:/var/www/html
+    depends_on:
+      - wp_db
+
+  wp_db:
+    image: mysql:5.7
+    environment:
+      MYSQL_DATABASE: wordpress
+      MYSQL_USER: wordpress
+      MYSQL_PASSWORD: wordpress
+      MYSQL_ROOT_PASSWORD: root
+    volumes:
+      - wp-db-data:/var/lib/mysql
+
+volumes:
+  odoo-data:
+  db-data:
+  wordpress-data:
+  wp-db-data:
