--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
-ODOO_DB=odoo
-ODOO_USER=odoo
-ODOO_PASSWORD=odoo
+ODOO_DB_HOST=odoo-db
+ODOO_DB_NAME=odoo
+ODOO_DB_USER=odoo
+ODOO_DB_PASSWORD=odoo
 
-WP_DB=wordpress
-WP_USER=wordpress
-WP_PASSWORD=wordpress
-WP_ROOT_PASSWORD=root
+WP_DB_NAME=wordpress
+WP_DB_USER=wpuser
+WP_DB_PASSWORD=wppass
+WP_DB_ROOT_PASSWORD=rootpass
