--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,62 +1,81 @@
-version: '3.8'
-
 services:
+  odoo-db:
+    image: postgres:13
+    platform: linux/arm64
+    environment:
+      POSTGRES_DB: ${ODOO_DB_NAME}
+      POSTGRES_USER: ${ODOO_DB_USER}
+      POSTGRES_PASSWORD: ${ODOO_DB_PASSWORD}
+    volumes:
+      - odoo-db-data:/var/lib/postgresql/data
+    networks:
+      - woodoo-net
+
+  odoo:
+    image: ghcr.io/castlecraft/odoo14-arm:latest
+    platform: linux/arm64
+    depends_on:
+      - odoo-db
+    environment:
+      - HOST=${ODOO_DB_HOST}
+      - USER=${ODOO_DB_USER}
+      - PASSWORD=${ODOO_DB_PASSWORD}
+    ports:
+      - "8069:8069"
+    volumes:
+      - ./odoo/addons:/mnt/extra-addons
+    networks:
+      - woodoo-net
+
+  wp-db:
+    image: public.ecr.aws/docker/library/mariadb:10.5
+    platform: linux/arm64
+    environment:
+      MYSQL_DATABASE: ${WP_DB_NAME}
+      MYSQL_USER: ${WP_DB_USER}
+      MYSQL_PASSWORD: ${WP_DB_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${WP_DB_ROOT_PASSWORD}
+    volumes:
+      - wp-db-data:/var/lib/mysql
+    networks:
+      - woodoo-net
+
+  wordpress:
+    image: public.ecr.aws/docker/library/wordpress:latest
+    platform: linux/arm64
+    depends_on:
+      - wp-db
+    environment:
+      WORDPRESS_DB_HOST: wp-db
+      WORDPRESS_DB_USER: ${WP_DB_USER}
+      WORDPRESS_DB_PASSWORD: ${WP_DB_PASSWORD}
+      WORDPRESS_DB_NAME: ${WP_DB_NAME}
+    ports:
+      - "8080:80"
+    volumes:
+      - ./wordpress/html:/var/www/html
+    networks:
+      - woodoo-net
+
   nginx:
-    image: nginx:stable
+    image: nginx:latest
+    platform: linux/arm64
+    depends_on:
+      - wordpress
+      - odoo
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ./certs:/etc/nginx/certs:ro
-    depends_on:
-      - odoo
-      - wordpress
-
-  odoo:
-    image: odoo:14
-    environment:
-      - HOST=localhost
-    ports:
-      - "8069:8069"
-    volumes:
-      - odoo-data:/var/lib/odoo
-    depends_on:
-      - db
-
-  db:
-    image: postgres:13
-    environment:
-      POSTGRES_DB: odoo
-      POSTGRES_USER: odoo
-      POSTGRES_PASSWORD: odoo
-    volumes:
-      - db-data:/var/lib/postgresql/data
-
-  wordpress:
-    image: wordpress:latest
-    environment:
-      WORDPRESS_DB_HOST: wp_db:3306
-      WORDPRESS_DB_NAME: wordpress
-      WORDPRESS_DB_USER: wordpress
-      WORDPRESS_DB_PASSWORD: wordpress
-    volumes:
-      - wordpress-data:/var/www/html
-    depends_on:
-      - wp_db
-
-  wp_db:
-    image: mysql:5.7
-    environment:
-      MYSQL_DATABASE: wordpress
-      MYSQL_USER: wordpress
-      MYSQL_PASSWORD: wordpress
-      MYSQL_ROOT_PASSWORD: root
-    volumes:
-      - wp-db-data:/var/lib/mysql
+      - ./nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
+      - ./certs:/etc/ssl/certs
+    networks:
+      - woodoo-net
 
 volumes:
-  odoo-data:
-  db-data:
-  wordpress-data:
+  odoo-db-data:
   wp-db-data:
+
+networks:
+  woodoo-net:
+    driver: bridge
